feature(product): integrate product service
